--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,15 +2,15 @@
     <string name="app_name">Flickr Browser</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_search">Search Activity</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="title_activity_photo_detail">Photo Detail Activity</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="title_activity_photo_detail">Photo Detail</string>
+    <!-- Strings used for app -->
+    <string name="photo_title_txt">Title</string>
+    <string name="photo_author_txt">Author</string>
+    <string name="photo_tag_txt">Tag</string>
+    <string name="photo_content_desc">photo content description</string>
+    <string name="activity_search_txt">Search</string>
+    <string name="searchable_hint">Enter photo tags</string>
 
 
 </resources>
